Made the Folder Structurized

--- a/Login&Resgisteration/LoginPage.html
+++ b/Login&Resgisteration/LoginPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="F:\WEB PROJECTS\Mini Projects\LoginPage.css">
+    <link rel="stylesheet" href="F:\WEB PROJECTS\Mini Projects\Login&Resgisteration\LoginPage.html">
     <title>Login Page</title>
 
 </head>
@@ -89,6 +89,6 @@
     </div>
 <!--   User Dashboard ends   -->
 
-    <script src="F:\WEB PROJECTS\Mini Projects\LoginPage.js"></script>
+    <script src="F:\WEB PROJECTS\Mini Projects\Login&Resgisteration\LoginPage.js"></script>
 </body>
 </html>
