Modified CSS Properties for  Opt Generator Project

--- a/OtpGenerator/index.html
+++ b/OtpGenerator/index.html
@@ -11,8 +11,8 @@
     <!-- Generate OTP Box -->
     <div class="box">
       <h2>Generate OTP</h2>
+      <p id="showOtp">OTP :- </p>
       <button id="generateBtn">Generate</button>
-      <p id="showOtp">OTP: </p>
     </div>
 
     <!-- Verify OTP Box -->
