Added JavaScript code for  Calculator  Project

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -10,29 +10,29 @@
   <div class="calculator">
     <input type="text" id="display" disabled />
     <div class="buttons">
-      <button class="btn" onclick="clearDisplay()">C</button>
-      <button class="btn" onclick="deleteLast()">⌫</button>
-      <button class="btn" onclick="append('%')">%</button>
-      <button class="btn operator" onclick="append('/')">÷</button>
+      <button id="btn-clear" class="btn-operator" >C</button>
+      <button id="btn-delete" class="btn-operator" >⌫</button>
+      <button id="btn-operator" class="btn" >%</button>
+      <button id="btn-operator" class="btn" >/</button>
 
-      <button class="btn" onclick="append('7')">7</button>
-      <button class="btn" onclick="append('8')">8</button>
-      <button class="btn" onclick="append('9')">9</button>
-      <button class="btn operator" onclick="append('*')">×</button>
+      <button id="btn" class="btn" >7</button>
+      <button id="btn" class="btn" >8</button>
+      <button id="btn" class="btn" >9</button>
+      <button id="btn-operator" class="btn" >*</button>
 
-      <button class="btn" onclick="append('4')">4</button>
-      <button class="btn" onclick="append('5')">5</button>
-      <button class="btn" onclick="append('6')">6</button>
-      <button class="btn operator" onclick="append('-')">−</button>
+      <button id="btn" class="btn" >4</button>
+      <button id="btn" class="btn" >5</button>
+      <button id="btn" class="btn" >6</button>
+      <button id="btn-operator" class="btn" >-</button>
 
-      <button class="btn" onclick="append('1')">1</button>
-      <button class="btn" onclick="append('2')">2</button>
-      <button class="btn" onclick="append('3')">3</button>
-      <button class="btn operator" onclick="append('+')">+</button>
+      <button id="btn" class="btn" >1</button>
+      <button id="btn" class="btn" >2</button>
+      <button id="btn" class="btn" >3</button>
+      <button id="btn-operator" class="btn" >+</button>
 
-      <button class="btn zero" onclick="append('0')">0</button>
-      <button class="btn" onclick="append('.')">.</button>
-      <button class="btn equals" onclick="calculate()">=</button>
+      <button id="btn" class="btn-zero" >0</button>
+      <button id="btn-operator" class="btn" >.</button>
+      <button id="btn-equals" class="btn-equals" >=</button>
     </div>
   </div>
   <script src="script.js"></script>
